@@ -184,7 +184,7 @@ class DecryptionRule extends RuleWithUserID
             PH::$JSON_TMP['sub']['object'][$this->name()]['target'] = $this->targets_toString();
         }
 
-        if( strlen($this->_description) > 0 )
+        if( $this->_description !== null && strlen($this->_description) > 0 )
         {
             PH::print_stdout( $padding . "  Desc:  " . $this->_description );
             PH::$JSON_TMP['sub']['object'][$this->name()]['description'] = $this->_description;
