@@ -21,10 +21,10 @@ set_include_path(dirname(__FILE__) . '/../' . PATH_SEPARATOR . get_include_path(
 require_once dirname(__FILE__)."/../../lib/pan_php_framework.php";
 require_once dirname(__FILE__)."/../../utils/lib/UTIL.php";
 
-PH::print_stdout("");
-PH::print_stdout("***********************************************");
-PH::print_stdout("*********** " . basename(__FILE__) . " UTILITY **************");
-PH::print_stdout("");
+//PH::print_stdout("");
+//PH::print_stdout("***********************************************");
+//PH::print_stdout("*********** " . basename(__FILE__) . " UTILITY **************");
+//PH::print_stdout("");
 
 
 ###################################################################################
@@ -69,6 +69,7 @@ $argv[] = "in=".$filename;
 $argv[] = "location=any";
 $argv[] = "actions=display:ResolveAddressSummary|ResolveServiceSummary|ResolveApplicationSummary";
 $argv[] = "shadow-json";
+$argv[] = "shadow-ignoreInvalidAddressObjects";
 
 
 $util = new RULEUTIL( "rule", $argv, $argc, __FILE__ );
