@@ -7,6 +7,7 @@ UTILS:
 * ALIAS extension and correction
 * pa_tag-edit | introduce new "actions=replace-with-object:TAGname" in combination with 'filter=(name eq OLDtagName)'
 * UTIL develop - introduce interface_getIP
+* UTIL all rule classes - improvements for PHP8.1
 
 BUGFIX:
 * update installer scripts / issues with git-php not availalbe
